# cpp-project-templete

./: .gitignore  CMakeLists.txt  main.cpp  main.out  makefile  meson.build  sub.cpp
